disable stikcy on search-controls again, too much positioning issues

--- a/css/includes/pages/_search.scss
+++ b/css/includes/pages/_search.scss
@@ -87,11 +87,6 @@
             width: min-content;
 
             .search-header {
-               .search-controls {
-                  position: sticky;
-                  left: 15px;
-               }
-
                .search-limit {
                   position: sticky;
                   right: 10px;
